# gestor_de_gastos_nova

flet-app/: README.md  pyproject.toml  requirements.txt
flet-app/src/: main.py
flet-app/src/components/: csvselectorcomponent.py  excel_generator_component.py
flet-app/src/utils/: excel_generator.py
flet-app/src/views/: csv_view.py
